--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ picture: assets/images/define-true-false-larger.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-external: true
-resume-url: https://www.linkedin.com/in/sriram-sami-965b3337/
+#resume: true
+#resume-external: true
+#resume-url: https://www.linkedin.com/in/sriram-sami-965b3337/
 
 url: http://frizensami.github.io
 # your url: http://USERNAME.github.io
@@ -39,7 +39,7 @@ disqus:
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: sriram-sami-965b3337
 # youtube: myyoutube
 # spotify: myspotify
 github: frizensami
