Change website URL in config

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ picture: assets/images/define-true-false-larger.png
 #resume-external: true
 #resume-url: https://www.linkedin.com/in/sriram-sami-965b3337/
 
-url: http://frizensami.github.io
+url: https://sriramsami.com
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
