--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ email: sriramsami@u.nus.edu
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: large
+width: normal
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
