--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# main text of home
+  # main text of home
 name: Sriram Sami
 bio: Works at the intersection of software, education, and trying to create effective social good. 
 
@@ -77,6 +77,14 @@ show-tags: true
 
 # related posts inside a post?
 related: true
+
+# Include a GPG key?
+gpg: true
+gpg-url: frizensami-public-pgp.key
+
+# Include a GPG key?
+ssh: true
+ssh-url: frizensami-public-ssh.key
 
 # Display links for next and previous posts for the specified categories
 post-advance-links: [blog]
