--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ analytics-google: 'UA-126704116-1'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
-  categories: [] #[blog, project] # only show disqus for posts that have these categories
+  shortname: sriramsami # enter this from your disqus account
+  categories: [blog, project] #[blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # facebook: frizensami
