--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
   # main text of home
 name: Sriram Sami
-bio: Works at the intersection of software, education, and trying to create effective social good. 
+bio: Working at the intersection of computer science, education, and effective social impact. <br> <br> Graduate Tutor and PhD student in the Sensing, Embedded, and Network Security Group (SENSG) at the National University of Singapore. 
 
 # twitter summary info
 # description: A blog about technology and stuff related
