Remove 'both' from description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
   # main text of home
 name: Sriram Sami
-bio: <b>Graduate Tutor</b> and <b>PhD candidate</b> at the <br> National University of Singapore. <br><br> Part of both the <a href="http://www.junhan.org/#cyphy" target="_blank">Cyber-Physical Systems and Security</a> (CyPhy) research group (with <a href="http://www.junhan.org/"> Prof. Jun Han</a>) and the <a href="https://www.cir.nus.edu.sg/" target="_blank">Communication and Internet Research</a> (CIR) research group (with <a href="https://www.comp.nus.edu.sg/~chanmc/"> Prof. Chan Mun Choon</a>). <br> <br> Interested in the intersection of <b>active sensing security research</b>, <b>education</b>, and <b>effective social impact</b>. <br> <br>  # twitter summary inf
+bio: <b>Graduate Tutor</b> and <b>PhD candidate</b> at the <br> National University of Singapore. <br><br> Part of the <a href="http://www.junhan.org/#cyphy" target="_blank">Cyber-Physical Systems and Security</a> (CyPhy) research group (with <a href="http://www.junhan.org/"> Prof. Jun Han</a>) and the <a href="https://www.cir.nus.edu.sg/" target="_blank">Communication and Internet Research</a> (CIR) research group (with <a href="https://www.comp.nus.edu.sg/~chanmc/"> Prof. Chan Mun Choon</a>). <br> <br> Interested in the intersection of <b>active sensing security research</b>, <b>education</b>, and <b>effective social impact</b>. <br> <br>  # twitter summary inf
 # description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
