Research interest rephrase

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
   # main text of home
 name: Sriram Sami
-bio: I am a Computer Science PhD candidate at the National University of Singapore. <br><br> My current research focus is <strong> security and privacy issues </strong> and <strong> novel use-cases </strong> for <strong> active sensors </strong> (LIDARs, time-of-flight sensors, etc) </b>.
+bio: I am a Computer Science PhD candidate at the National University of Singapore. <br><br> My current research focuses on <strong> security and privacy issues </strong> and <strong> novel use-cases </strong> for <strong> active sensors </strong> (LIDARs, time-of-flight sensors, etc) </b>.
 
 bioext: I am part of the <a href="https://www.cyphy-lab.org/" target="_blank">Cyber-Physical Systems and Security</a> <strong> (CyPhy)</strong> and <a href="https://www.cir.nus.edu.sg/" target="_blank">Communication and Internet Research</a><strong> (CIR) </strong> research groups. <br> <br>
 
