--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@
   plugins:
       - jekyll-seo-tag
       - jekyll-gist
-      # - jekyll-feed
+      - jekyll-feed
       - jemoji
       # - jekyll-admin
 
