Push first version of teaching page

--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,9 @@
   # Research page
   research: true
 
+  # Teaching page
+  teaching: true
+
   # do you want to show the "read time" of the posts?
   read-time: true
 
