--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
   # main text of home
   name: Sriram Sami
-  bio: I am a Computer Science PhD candidate at the National University of Singapore. <br><br> My current research focuses on <strong> security and privacy issues </strong> and <strong> novel use-cases </strong> for <strong> active sensors </strong> (LIDARs, time-of-flight sensors, etc) </b>.
+  bio: "I am an Instructor and graduating Computer Science PhD candidate at the <br>National University of Singapore. <br><br> I <a href=\"/teaching\">teach</a> introductory courses for <strong>Computer Engineering</strong> students, and Operating Systems / Parallel Computing modules for <strong>Computer Science</strong> students. <br><br>  My <a href=\"/research\">research</a> focuses on <strong> security and privacy issues </strong> and <strong> novel use-cases </strong> for <strong> active sensors </strong> (e.g., LIDARs)</b>.<br><br><br><strong>Office:</strong> School of Computing, <u>COM2 02-47</u>"
 
-  bioext: I am part of the <a href="https://www.cyphy-lab.org/" target="_blank">Cyber-Physical Systems and Security</a> <strong> (CyPhy)</strong> and <a href="https://www.cir.nus.edu.sg/" target="_blank">Communication and Internet Research</a><strong> (CIR) </strong> research groups. <br> <br>
+#   bioext: I have been part of the <a href="https://www.cyphy-lab.org/" target="_blank">Cyber-Physical Systems and Security</a> <strong> (CyPhy)</strong> and <a href="https://www.cir.nus.edu.sg/" target="_blank">Communication and Internet Research</a><strong> (CIR) </strong> research groups. <br> <br>
 
   description: Sriram Sami
 
