Update email to comp

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@
   #medium: medium
   # vimeo: myvimeo
   # lanyrd: mylanyrd
-  email: sriramsami@u.nus.edu
+  email: srirams@comp.nus.edu.sg
 
   # do you want a larger site? change the option below
   # options: [normal, large] | default: normal
