--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
   bio: "I am an Instructor and graduating Computer Science PhD candidate at the <br>National University of Singapore. <br><br> I <a href=\"/teaching\">teach</a> introductory courses for <strong>Computer Engineering</strong> students, and Operating Systems / Parallel Computing modules for <strong>Computer Science</strong> students. <br><br>  My <a href=\"/research\">research</a> focuses on <strong> security and privacy issues </strong> and <strong> novel use-cases </strong> for <strong> active sensors </strong> (e.g., LIDARs)</b>.<br><br><br><strong>Office:</strong> School of Computing, <u>COM2 02-47</u>"
 
 #   bioext: I have been part of the <a href="https://www.cyphy-lab.org/" target="_blank">Cyber-Physical Systems and Security</a> <strong> (CyPhy)</strong> and <a href="https://www.cir.nus.edu.sg/" target="_blank">Communication and Internet Research</a><strong> (CIR) </strong> research groups. <br> <br>
+  bioext: "<br/><p style=\"margin-bottom:-10px\">Links to my LinkedIn, GitHub, and email:</p>"
 
   description: Sriram Sami
 
